# Citatum

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
docker/: .env.example  README.md  docker-compose.yml
docker/env/: .env.example  .env.example.postgres  .env.example.postgres-exporter  .env.example.rabbitmq  .env.example.redis
docker/fastapi/: Dockerfile  docker-entrypoint.sh
docker/prometheus/: prometheus.yml
env/fastapi/: .env.example
src/: __init__.py  main.py
src/controllers/: BaseController.py  DocumentController.py  EvidenceController.py  ProcessController.py  TopicController.py  __init__.py
src/core/: app.py  celery_app.py  flowerconfig.py  middleware.py
src/models/: BaseDataModel.py  ChunkModel.py  DocumentModel.py  TopicModel.py  __init__.py
src/models/db_schemas/: __init__.py
src/models/db_schemas/citatum/: __init__.py  citatum_base.py
src/routes/: __init__.py  base.py  dependencies.py  documents.py  evidence.py
src/stores/: __init__.py
src/stores/llm/: LLMEnums.py  LLMInterface.py  LLMProviderFactory.py
src/stores/llm/providers/: CoHereProvider.py  OpenAIProvider.py
src/stores/vectordb/: VectorDBInterface.py  VectorDBProviderFactory.py  __init__.py
src/stores/vectordb/providers/: PGVectorProvider.py  QdrantDBProvider.py  __init__.py
src/tasks/: __init__.py  document_tasks.py  maintenance.py
src/utils/: __init__.py  config.py  database.py  helpers.py  idempotency_manager.py  logger.py  metrics.py  uuid_validator.py
(+9 files in other folders)
