[project]
name = "citatum"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.0",
    "asyncpg>=0.31.0",
    "cohere>=5.20.1",
    "fastapi>=0.128.0",
    "langchain>=1.2.4",
    "langchain-community>=0.4.1",
    "openai>=2.15.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pymupdf>=1.26.7",
    "python-multipart>=0.0.21",
    "qdrant-client>=1.16.2",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.40.0",
    "celery>=5.4.0",
    "redis>=5.2.0",
    "flower>=2.0.0",
    "kombu>=5.4.0",
    "prometheus-client>=0.24.1",
    "starlette-exporter>=0.23.0",
    "fastapi-health>=0.4.0",
]
